--- a/public/index.html
+++ b/public/index.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="#">
-    <title>ITconference 2018</title>
+    <link rel="stylesheet" href="./style/index.css">
+    <title>True Web-Chat</title>
 </head>
 <body>
 <div id="root"></div>
-<script src="public/build/bundle.js"></script>
+<script src="./bin/bundle.js"></script>
 </body>
 </html>
